--- a/MLX LM GRPO.ipynb
+++ b/MLX LM GRPO.ipynb
@@ -160,8 +160,8 @@
    "id": "9b607237",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-19T12:17:21.830696Z",
-     "start_time": "2025-06-19T12:17:21.352682Z"
+     "end_time": "2025-06-19T13:14:06.000595Z",
+     "start_time": "2025-06-19T13:14:04.516869Z"
     }
    },
    "source": [
@@ -192,8 +192,8 @@
    "id": "c3ff309a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-19T12:18:03.224698Z",
-     "start_time": "2025-06-19T12:18:03.156749Z"
+     "end_time": "2025-06-19T13:14:19.838682Z",
+     "start_time": "2025-06-19T13:14:08.042658Z"
     }
    },
    "source": [
@@ -211,8 +211,17 @@
     "import copy\n",
     "os.environ[\"TOKENIZERS_PARALLELISM\"] = \"true\""
    ],
-   "outputs": [],
-   "execution_count": 6
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lewis/repos/github.com/lewiswon/mlx-finetuning/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -227,8 +236,8 @@
    "id": "f0851dc8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-19T12:18:06.026461Z",
-     "start_time": "2025-06-19T12:18:06.012903Z"
+     "end_time": "2025-06-19T13:14:22.368286Z",
+     "start_time": "2025-06-19T13:14:22.364587Z"
     }
    },
    "source": [
@@ -249,7 +258,7 @@
     "    json.dump(lora_config, fid, indent=4)"
    ],
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -267,8 +276,8 @@
    "id": "fb0b16f2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-19T12:27:13.010152Z",
-     "start_time": "2025-06-19T12:26:49.028568Z"
+     "end_time": "2025-06-19T13:14:36.190386Z",
+     "start_time": "2025-06-19T13:14:24.996592Z"
     }
    },
    "source": [
@@ -286,8 +295,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 13 files: 100%|██████████| 13/13 [00:00<00:00, 132344.54it/s]\n",
-      "Fetching 13 files: 100%|██████████| 13/13 [00:00<00:00, 55809.57it/s]\n"
+      "Fetching 13 files: 100%|██████████| 13/13 [00:00<00:00, 200463.06it/s]\n",
+      "Fetching 13 files: 100%|██████████| 13/13 [00:00<00:00, 160370.45it/s]\n"
      ]
     },
     {
@@ -718,12 +727,12 @@
        ")"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 11
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -738,8 +747,8 @@
    "id": "50e1ab3a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-19T12:27:43.923174Z",
-     "start_time": "2025-06-19T12:27:34.680175Z"
+     "end_time": "2025-06-19T13:14:45.930019Z",
+     "start_time": "2025-06-19T13:14:39.686871Z"
     }
    },
    "source": [
@@ -765,7 +774,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 13 files: 100%|██████████| 13/13 [00:00<00:00, 168811.00it/s]\n"
+      "Fetching 13 files: 100%|██████████| 13/13 [00:00<00:00, 156234.82it/s]\n"
      ]
     },
     {
@@ -776,7 +785,7 @@
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -797,8 +806,8 @@
    "id": "grpo-helpers",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-19T12:27:49.316716Z",
-     "start_time": "2025-06-19T12:27:49.306669Z"
+     "end_time": "2025-06-19T13:14:45.991394Z",
+     "start_time": "2025-06-19T13:14:45.977064Z"
     }
    },
    "source": [
@@ -840,13 +849,13 @@
     "    return loss, mx.mean(policy_reward), mx.mean(kl_div)"
    ],
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-19T12:31:39.651592Z",
-     "start_time": "2025-06-19T12:31:39.642320Z"
+     "end_time": "2025-06-19T13:14:47.743776Z",
+     "start_time": "2025-06-19T13:14:47.740364Z"
     }
    },
    "cell_type": "code",
@@ -866,15 +875,15 @@
    ],
    "id": "82634a0fd0588e0f",
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 10
   },
   {
    "cell_type": "code",
    "id": "grpo-loop",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-19T12:33:47.540012Z",
-     "start_time": "2025-06-19T12:33:47.525559Z"
+     "end_time": "2025-06-19T13:15:24.629460Z",
+     "start_time": "2025-06-19T13:15:24.622008Z"
     }
    },
    "source": [
@@ -913,27 +922,26 @@
     "        rollout_log_probs = []\n",
     "        rollout_a_toks = []\n",
     "\n",
-    "        with mx.eval():\n",
-    "            for i in range(batch_size):\n",
-    "                prompt_tokens = tokenizer.apply_chat_template(batch_prompts[i], continue_final_message=True)\n",
-    "                group_rewards = []\n",
-    "                \n",
-    "                for _ in range(group_size):\n",
-    "                    # Generate a response\n",
-    "                    response = generate(model_old, tokenizer, prompt_tokens, max_tokens=max_ans_len, temp=0.7)\n",
-    "                    answer_tokens = tokenizer.encode(response, add_special_tokens=False)\n",
-    "                    \n",
-    "                    # 3. Get Reward\n",
-    "                    reward = 1.0 if batch_answers[i] in response else 0.0\n",
-    "                    group_rewards.append(reward)\n",
-    "                    \n",
-    "                    # Store data for the optimization step\n",
-    "                    full_sequence = mx.array(prompt_tokens + answer_tokens)\n",
-    "                    rollout_sequences.append(full_sequence)\n",
-    "                    rollout_a_toks.append(mx.array(answer_tokens))\n",
+    "        for i in range(batch_size):\n",
+    "            prompt_tokens = tokenizer.apply_chat_template(batch_prompts[i], continue_final_message=True)\n",
+    "            group_rewards = []\n",
     "\n",
-    "                all_rewards.extend(group_rewards)\n",
-    "                rollout_rewards.append(mx.array(group_rewards))\n",
+    "            for _ in range(group_size):\n",
+    "                # Generate a response\n",
+    "                response = generate(model_old, tokenizer, prompt_tokens, max_tokens=max_ans_len)\n",
+    "                answer_tokens = tokenizer.encode(response, add_special_tokens=False)\n",
+    "\n",
+    "                # 3. Get Reward\n",
+    "                reward = 1.0 if batch_answers[i] in response else 0.0\n",
+    "                group_rewards.append(reward)\n",
+    "\n",
+    "                # Store data for the optimization step\n",
+    "                full_sequence = mx.array(prompt_tokens + answer_tokens)\n",
+    "                rollout_sequences.append(full_sequence)\n",
+    "                rollout_a_toks.append(mx.array(answer_tokens))\n",
+    "\n",
+    "            all_rewards.extend(group_rewards)\n",
+    "            rollout_rewards.append(mx.array(group_rewards))\n",
     "        \n",
     "        # 4. Compute Advantages\n",
     "        advantages = []\n",
@@ -973,7 +981,7 @@
     "    return losses, all_rewards"
    ],
    "outputs": [],
-   "execution_count": 19
+   "execution_count": 13
   },
   {
    "cell_type": "markdown",
@@ -989,8 +997,8 @@
    "metadata": {
     "scrolled": true,
     "ExecuteTime": {
-     "end_time": "2025-06-19T12:33:50.923847Z",
-     "start_time": "2025-06-19T12:33:50.872525Z"
+     "end_time": "2025-06-19T13:14:54.722876Z",
+     "start_time": "2025-06-19T13:14:54.200945Z"
     }
    },
    "source": [
@@ -1055,13 +1063,13 @@
      "traceback": [
       "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
       "\u001B[31mTypeError\u001B[39m                                 Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[20]\u001B[39m\u001B[32m, line 21\u001B[39m\n\u001B[32m     18\u001B[39m start_time = time.time()\n\u001B[32m     20\u001B[39m \u001B[38;5;66;03m# Run the custom GRPO training loop\u001B[39;00m\n\u001B[32m---> \u001B[39m\u001B[32m21\u001B[39m losses, rewards = \u001B[43mgrpo_train_loop\u001B[49m\u001B[43m(\u001B[49m\n\u001B[32m     22\u001B[39m \u001B[43m    \u001B[49m\u001B[43mmodel\u001B[49m\u001B[43m=\u001B[49m\u001B[43mmodel\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     23\u001B[39m \u001B[43m    \u001B[49m\u001B[43mmodel_old\u001B[49m\u001B[43m=\u001B[49m\u001B[43mmodel_old\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     24\u001B[39m \u001B[43m    \u001B[49m\u001B[43mmodel_ref\u001B[49m\u001B[43m=\u001B[49m\u001B[43mmodel_ref\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     25\u001B[39m \u001B[43m    \u001B[49m\u001B[43mtokenizer\u001B[49m\u001B[43m=\u001B[49m\u001B[43mtokenizer\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     26\u001B[39m \u001B[43m    \u001B[49m\u001B[43moptimizer\u001B[49m\u001B[43m=\u001B[49m\u001B[43mopt\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     27\u001B[39m \u001B[43m    \u001B[49m\u001B[43mtrain_set\u001B[49m\u001B[43m=\u001B[49m\u001B[43mtrain_set\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     28\u001B[39m \u001B[43m    \u001B[49m\u001B[43miters\u001B[49m\u001B[43m=\u001B[49m\u001B[43miters\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     29\u001B[39m \u001B[43m    \u001B[49m\u001B[43mgroup_size\u001B[49m\u001B[43m=\u001B[49m\u001B[43mgroup_size\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     30\u001B[39m \u001B[43m    \u001B[49m\u001B[43mbatch_size\u001B[49m\u001B[43m=\u001B[49m\u001B[43mbatch_size\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     31\u001B[39m \u001B[43m    \u001B[49m\u001B[43mepsilon\u001B[49m\u001B[43m=\u001B[49m\u001B[43mepsilon\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     32\u001B[39m \u001B[43m    \u001B[49m\u001B[43mbeta\u001B[49m\u001B[43m=\u001B[49m\u001B[43mbeta\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     33\u001B[39m \u001B[43m    \u001B[49m\u001B[43mupdate_every\u001B[49m\u001B[43m=\u001B[49m\u001B[43mupdate_every\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     34\u001B[39m \u001B[43m    \u001B[49m\u001B[43mmax_ans_len\u001B[49m\u001B[43m=\u001B[49m\u001B[43mmax_ans_len\u001B[49m\n\u001B[32m     35\u001B[39m \u001B[43m)\u001B[49m\n\u001B[32m     37\u001B[39m end_time = time.time()\n\u001B[32m     38\u001B[39m \u001B[38;5;28mprint\u001B[39m(\u001B[33mf\u001B[39m\u001B[33m\"\u001B[39m\u001B[33mTraining finished in \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mend_time\u001B[38;5;250m \u001B[39m-\u001B[38;5;250m \u001B[39mstart_time\u001B[38;5;132;01m:\u001B[39;00m\u001B[33m.2f\u001B[39m\u001B[38;5;132;01m}\u001B[39;00m\u001B[33ms\u001B[39m\u001B[33m\"\u001B[39m)\n",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[19]\u001B[39m\u001B[32m, line 36\u001B[39m, in \u001B[36mgrpo_train_loop\u001B[39m\u001B[34m(model, model_old, model_ref, tokenizer, optimizer, train_set, iters, group_size, batch_size, epsilon, beta, update_every, max_ans_len)\u001B[39m\n\u001B[32m     33\u001B[39m rollout_log_probs = []\n\u001B[32m     34\u001B[39m rollout_a_toks = []\n\u001B[32m---> \u001B[39m\u001B[32m36\u001B[39m \u001B[43m\u001B[49m\u001B[38;5;28;43;01mwith\u001B[39;49;00m\u001B[43m \u001B[49m\u001B[43mmx\u001B[49m\u001B[43m.\u001B[49m\u001B[43meval\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\u001B[43m:\u001B[49m\n\u001B[32m     37\u001B[39m \u001B[43m    \u001B[49m\u001B[38;5;28;43;01mfor\u001B[39;49;00m\u001B[43m \u001B[49m\u001B[43mi\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;129;43;01min\u001B[39;49;00m\u001B[43m \u001B[49m\u001B[38;5;28;43mrange\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mbatch_size\u001B[49m\u001B[43m)\u001B[49m\u001B[43m:\u001B[49m\n\u001B[32m     38\u001B[39m \u001B[43m        \u001B[49m\u001B[43mprompt_tokens\u001B[49m\u001B[43m \u001B[49m\u001B[43m=\u001B[49m\u001B[43m \u001B[49m\u001B[43mtokenizer\u001B[49m\u001B[43m.\u001B[49m\u001B[43mapply_chat_template\u001B[49m\u001B[43m(\u001B[49m\u001B[43mbatch_prompts\u001B[49m\u001B[43m[\u001B[49m\u001B[43mi\u001B[49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mcontinue_final_message\u001B[49m\u001B[43m=\u001B[49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m)\u001B[49m\n",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[12]\u001B[39m\u001B[32m, line 21\u001B[39m\n\u001B[32m     18\u001B[39m start_time = time.time()\n\u001B[32m     20\u001B[39m \u001B[38;5;66;03m# Run the custom GRPO training loop\u001B[39;00m\n\u001B[32m---> \u001B[39m\u001B[32m21\u001B[39m losses, rewards = \u001B[43mgrpo_train_loop\u001B[49m\u001B[43m(\u001B[49m\n\u001B[32m     22\u001B[39m \u001B[43m    \u001B[49m\u001B[43mmodel\u001B[49m\u001B[43m=\u001B[49m\u001B[43mmodel\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     23\u001B[39m \u001B[43m    \u001B[49m\u001B[43mmodel_old\u001B[49m\u001B[43m=\u001B[49m\u001B[43mmodel_old\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     24\u001B[39m \u001B[43m    \u001B[49m\u001B[43mmodel_ref\u001B[49m\u001B[43m=\u001B[49m\u001B[43mmodel_ref\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     25\u001B[39m \u001B[43m    \u001B[49m\u001B[43mtokenizer\u001B[49m\u001B[43m=\u001B[49m\u001B[43mtokenizer\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     26\u001B[39m \u001B[43m    \u001B[49m\u001B[43moptimizer\u001B[49m\u001B[43m=\u001B[49m\u001B[43mopt\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     27\u001B[39m \u001B[43m    \u001B[49m\u001B[43mtrain_set\u001B[49m\u001B[43m=\u001B[49m\u001B[43mtrain_set\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     28\u001B[39m \u001B[43m    \u001B[49m\u001B[43miters\u001B[49m\u001B[43m=\u001B[49m\u001B[43miters\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     29\u001B[39m \u001B[43m    \u001B[49m\u001B[43mgroup_size\u001B[49m\u001B[43m=\u001B[49m\u001B[43mgroup_size\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     30\u001B[39m \u001B[43m    \u001B[49m\u001B[43mbatch_size\u001B[49m\u001B[43m=\u001B[49m\u001B[43mbatch_size\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     31\u001B[39m \u001B[43m    \u001B[49m\u001B[43mepsilon\u001B[49m\u001B[43m=\u001B[49m\u001B[43mepsilon\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     32\u001B[39m \u001B[43m    \u001B[49m\u001B[43mbeta\u001B[49m\u001B[43m=\u001B[49m\u001B[43mbeta\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     33\u001B[39m \u001B[43m    \u001B[49m\u001B[43mupdate_every\u001B[49m\u001B[43m=\u001B[49m\u001B[43mupdate_every\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m     34\u001B[39m \u001B[43m    \u001B[49m\u001B[43mmax_ans_len\u001B[49m\u001B[43m=\u001B[49m\u001B[43mmax_ans_len\u001B[49m\n\u001B[32m     35\u001B[39m \u001B[43m)\u001B[49m\n\u001B[32m     37\u001B[39m end_time = time.time()\n\u001B[32m     38\u001B[39m \u001B[38;5;28mprint\u001B[39m(\u001B[33mf\u001B[39m\u001B[33m\"\u001B[39m\u001B[33mTraining finished in \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mend_time\u001B[38;5;250m \u001B[39m-\u001B[38;5;250m \u001B[39mstart_time\u001B[38;5;132;01m:\u001B[39;00m\u001B[33m.2f\u001B[39m\u001B[38;5;132;01m}\u001B[39;00m\u001B[33ms\u001B[39m\u001B[33m\"\u001B[39m)\n",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[11]\u001B[39m\u001B[32m, line 36\u001B[39m, in \u001B[36mgrpo_train_loop\u001B[39m\u001B[34m(model, model_old, model_ref, tokenizer, optimizer, train_set, iters, group_size, batch_size, epsilon, beta, update_every, max_ans_len)\u001B[39m\n\u001B[32m     33\u001B[39m rollout_log_probs = []\n\u001B[32m     34\u001B[39m rollout_a_toks = []\n\u001B[32m---> \u001B[39m\u001B[32m36\u001B[39m \u001B[43m\u001B[49m\u001B[38;5;28;43;01mwith\u001B[39;49;00m\u001B[43m \u001B[49m\u001B[43mmx\u001B[49m\u001B[43m.\u001B[49m\u001B[43meval\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\u001B[43m:\u001B[49m\n\u001B[32m     37\u001B[39m \u001B[43m    \u001B[49m\u001B[38;5;28;43;01mfor\u001B[39;49;00m\u001B[43m \u001B[49m\u001B[43mi\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;129;43;01min\u001B[39;49;00m\u001B[43m \u001B[49m\u001B[38;5;28;43mrange\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mbatch_size\u001B[49m\u001B[43m)\u001B[49m\u001B[43m:\u001B[49m\n\u001B[32m     38\u001B[39m \u001B[43m        \u001B[49m\u001B[43mprompt_tokens\u001B[49m\u001B[43m \u001B[49m\u001B[43m=\u001B[49m\u001B[43m \u001B[49m\u001B[43mtokenizer\u001B[49m\u001B[43m.\u001B[49m\u001B[43mapply_chat_template\u001B[49m\u001B[43m(\u001B[49m\u001B[43mbatch_prompts\u001B[49m\u001B[43m[\u001B[49m\u001B[43mi\u001B[49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mcontinue_final_message\u001B[49m\u001B[43m=\u001B[49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m)\u001B[49m\n",
       "\u001B[31mTypeError\u001B[39m: 'NoneType' object does not support the context manager protocol"
      ]
     }
    ],
-   "execution_count": 20
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
