working on debugging calculate_log_probs()

--- a/MLX LM GRPO.ipynb
+++ b/MLX LM GRPO.ipynb
@@ -818,14 +818,28 @@
     "    # Pass the full sequence (prompt + answer) to the model\n",
     "    logits = model(sequences)\n",
     "\n",
-    "    # We only care about the logits for the answer tokens\n",
-    "    # The logits for the Nth token are used to predict the (N+1)th token\n",
-    "    logits = logits[:, -len(a_toks)-1:-1, :]\n",
+    "    # Convert to log probabilities\n",
     "    log_probs_full = nn.log_softmax(logits, axis=-1)\n",
     "\n",
-    "    # Get the log prob of the actual answer tokens that were generated\n",
-    "    log_probs = mx.take_along_axis(log_probs_full, a_toks[None, :, None], axis=-1).squeeze(-1)\n",
-    "    return mx.sum(log_probs, axis=-1)\n",
+    "    ## Find the actual positions where answer tokens should be extracted\n",
+    "    # This assumes a_toks contains the actual token IDs that were generated\n",
+    "    batch_size, seq_len = sequences.shape\n",
+    "    _, ans_len = a_toks.shape\n",
+    "\n",
+    "    # Calculate the starting position for answer tokens (assuming they're at the end)\n",
+    "    start_pos = seq_len - ans_len\n",
+    "\n",
+    "    # Extract log probabilities for the answer portion of the sequence\n",
+    "    answer_log_probs = log_probs_full[:, start_pos:start_pos+ans_len, :]\n",
+    "\n",
+    "    # Create indices for gathering - ensure proper shape alignment\n",
+    "    indices = a_toks[:, :, None]\n",
+    "\n",
+    "    # Extract log probabilities for the actual answer tokens\n",
+    "    selected_log_probs = mx.take_along_axis(answer_log_probs, indices, axis=-1).squeeze(-1)\n",
+    "\n",
+    "    # Sum log probabilities across the answer sequence\n",
+    "    return mx.sum(selected_log_probs, axis=-1)\n",
     "\n",
     "def grpo_loss_fn(model, model_ref, sequences, a_toks, advantages, old_log_probs, beta, epsilon):\n",
     "    \"\"\"The GRPO loss function.\"\"\"\n",
