updated padding sequence

--- a/MLX LM GRPO.ipynb
+++ b/MLX LM GRPO.ipynb
@@ -875,16 +875,23 @@
    "source": [
     "# Pad sequences to the same length\n",
     "def pad_sequences(sequences, pad_token_id):\n",
+    "    if not sequences:\n",
+    "        return mx.array([])\n",
+    "\n",
+    "    # Find hte maximum length\n",
     "    max_len = max(len(seq) for seq in sequences)\n",
-    "    padded = []\n",
+    "    padded_sequences = []\n",
+    "\n",
     "    for seq in sequences:\n",
     "        if len(seq) < max_len:\n",
-    "            padding = mx.full((max_len - len(seq),), pad_token_id, dtype=seq.dtype)\n",
-    "            padded_seq = mx.concatenate([seq, padding])\n",
+    "            pading = mx.array([pad_token_id] * (max_len - len(seq)))\n",
+    "            padded_seq = mx.concatenate([seq, pading])\n",
+    "\n",
     "        else:\n",
     "            padded_seq = seq\n",
-    "        padded.append(padded_seq)\n",
-    "    return mx.stack(padded)\n"
+    "        padded_sequences.append(padded_seq)\n",
+    "\n",
+    "    return mx.stack(padded_sequences)"
    ],
    "id": "82634a0fd0588e0f",
    "outputs": [],
