--- a/MLX LM GRPO.ipynb
+++ b/MLX LM GRPO.ipynb
@@ -884,8 +884,8 @@
     "\n",
     "    for seq in sequences:\n",
     "        if len(seq) < max_len:\n",
-    "            pading = mx.array([pad_token_id] * (max_len - len(seq)))\n",
-    "            padded_seq = mx.concatenate([seq, pading])\n",
+    "            padding = mx.array([pad_token_id] * (max_len - len(seq)))\n",
+    "            padded_seq = mx.concatenate([seq, padding])\n",
     "\n",
     "        else:\n",
     "            padded_seq = seq\n",
