Added a note that reward function for GRPO is only a dummy, to be added later.

--- a/MLX LM GRPO.ipynb
+++ b/MLX LM GRPO.ipynb
@@ -13,7 +13,15 @@
     "2. Setup and run GRPO training. We will implement the full RL loop, including rollout, reward calculation, and optimization with the PPO-clip objective.\n",
     "3. Evaluate the final accuracy on the test set.\n",
     "4. Fuse the resulting adapters into the base model.\n",
-    "5. Discuss tips for debugging accuracy and efficiency."
+    "5. Discuss tips for debugging accuracy and efficiency.\n",
+    "\n",
+    "Note: This notebook currently does not have an implementation for the reward function. Instead, it has a dummy reward logic:\n",
+    "\n",
+    "```python\n",
+    "reward = 1.0 if batch_answers[i] in response else 0.0\n",
+    "```\n",
+    "\n",
+    "I will add a reward function to this notebook later on and inform again when done, but please feel free to file a pull request if you would like to contribute in anyway."
    ]
   },
   {
