--- a/MLX LM GRPO.ipynb
+++ b/MLX LM GRPO.ipynb
@@ -610,7 +610,7 @@
     "            conversation=messages, add_generation_prompt=True\n",
     "        )\n",
     "        # Use greedy decoding for evaluation\n",
-    "        response = generate(model, tokenizer, prompt=prompt, max_tokens=4, temp=0.0)\n",
+    "        response = generate(model, tokenizer, prompt=prompt, max_tokens=4)\n",
     "        num_correct += (answer in response)\n",
     "    return num_correct / num_test"
    ]
